# cppci

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  sample_test.cpp
.devcontainer/: Dockerfile  devcontainer.json  install-gtest.sh  update-gcc.sh
.github/workflows/: ci.yml
learning/c++/: CMakeLists.txt  shared_ptr.cpp  typeid.cpp  unique_ptr.cpp
scripts/: build.sh  run_uts.sh
tests/: CMakeLists.txt
testy/: simple_test.cpp
ut/: CMakeLists.txt  run_ut.cpp  simple_test.cpp
ut/map_tests/: CMakeLists.txt  map_tests.cpp
ut/set_tests/: CMakeLists.txt  set_tests.cpp
ut/vector_tests/: CMakeLists.txt  vector_tests.cpp
